Changed posts to work and fixed logo z-index

--- a/sass/modules/_navbar.scss
+++ b/sass/modules/_navbar.scss
@@ -31,4 +31,12 @@
     
 }
 
+.header-logo {
+	z-index: 1000;
+	cursor: pointer;
+  position: absolute;
+  left: 60px;
+  top: 40px;
+  max-width: 200px;
+}
 
